tests/paczka2/big_fuzzy/86758940.err
Error in line 1: LxLIunph5 S84 33,5
Error in line 5: S173 S173 29,7
Error in line 2: LxLIunph5 S191 18,8
Error in line 24: 9l5V S173 29,8
Error in line 31: 9l5V S191 55,5
Error in line 29: LxLIunph5 S211 34,5
Error in line 34: 9l5V S173 21,4
Error in line 37: 9l5V S84 70,4
Error in line 40: ab9Vxdcib S]73 40,]
Error in line 38: 9l5V S211 18,4
Error in line 36: LxLIunph5 S173 96,7
Error in line 41: ab9Vxdcib S84 8,5
Error in line 48: LxLIunph5 S211 47,34
Error in line 42: 9l5V S84 56,0
Error in line 43: tRpCo5Ck S173 97,9
Error in line 46: ab9Vxdcib S4 7,3
Error in line 56: LxLIunph5 S191 69,6
Error in line 64: h4K6Jw S211 305,7
Error in line 63: LxLIunph5 S211 97,3
Error in line 67: LxLIunph5 S191 55,1
Error in line 57: 9l5V S84 17,0
Error in line 68: h4K6Jw S191 34,8
Error in line 72: 9l5V S211 86,3
Error in line 81: tRpCo5Ck S211 19,0
Error in line 80: LxLIunph5 S84 52,5
Error in line 96: LxLIunph5 S173 97,3
Error in line 100: LxLIunph5 S191 91,9
Error in line 110: tRpCo5Ck S84 57,5
Error in line 113: 9l5V S191 65,6
Error in line 119: LxLIunph5 S84 15,9
Error in line 125: LxLIunph5 S191 61,6
Error in line 127: LxLIunph5 S84 72,9
Error in line 129: 9l5V S84 90,1
Error in line 135: tRpCo5Ck S191 83,3
Error in line 139: tRpCo5Ck S84 65,00
Error in line 138: 9l5V S191 35,4
Error in line 144: h4K6Jw S173 44,6
Error in line 136: tRpCo5Ck S84 87,8
Error in line 159: EKBVO S898 87,7
Error in line 166: EKBVO S84 61,8
Error in line 151: h4K6Jw S84 47,7
Error in line 177: h4K6Jw S191 8,7
Error in line 184: 9l5V S84 24,8
Error in line 193: h4K6Jw S191 1,8
Error in line 190: tRpCo5Ck S173 13,1
Error in line 198: 9l5V S211 229,5
Error in line 213: tRpCo5Ck S191 39,7
Error in line 229: EKBVO S191 1,4
Error in line 228: h4K6Jw S211 75,4
Error in line 232: h4K6Jw S173 29,9
Error in line 237: ab9Vxdcib S191 67,5
Error in line 238: h4K6Jw S84 28,4
